2017-04-19  Per Bothner  <per@bothner.com>

	Fix so functions like '=' throw exception on bad arguments.
	* NumberCompare.java (compareStrict): New method.

2017-03-21  Per Bothner  <per@bothner.com>

	* Expt.java: Moved from from kawa/standard/expt.java.

2017-01-26  Per Bothner  <per@bothner.com>

	* GetModuleClass.java (getModuleClassExp): New method.

2016-12-03  Per Bothner  <per@bothner.com>

	* CompileMisc.java (validateApplyFormat): Generalize optimitation
	for literal format string.

2016-11-27  Per Bothner  <per@bothner.com>

	* CompileNamedPart.java (combineName): Handle case when prefix
	matches the name of an existing class.

	* CompileArith.java: Optimization for ADD and SUB.
	When types are unknown, call AddOp.apply2 rather than Procedure.apply2.

2016-11-15  Per Bothner  <per@bothner.com>

	* RunProcess.java (doit): Redirect input to INHERIT in some cases.

2016-10-29  Per Bothner  <per@bothner.com>

	* DisplayFormat.java (writeKNode): Force xhtml style for KNode.

2016-09-10  Per Bothner  <per@bothner.com>

	* ParseFormat.java: Remove unneeded import.
	Fixes Savannah bug #49048 "r8947 broken the build on ParseFormat.java".

2016-09-09  Per Bothner  <per@bothner.com>

	* DisplayFormat.java: Update for new GenericFormat API.

2016-09-07  Per Bothner  <per@bothner.com>

	* DisplayFormat.java (writeRange): Fix thinko.

2016-09-05  Per Bothner  <per@bothner.com>

	* DisplayFormat.java: Restructure to use GenericFormat.
	Also add DomTerm support for Shape and BufferedImage.

2016-09-02  Per Bothner  <per@bothner.com>

	* RangeUtils.java (upto, downto): Move IntRange-constructing
	logic back to Range.java,
	* DisplayFormat.java: Print pseudo-ranges '[<:]' and '[>:]'.

2016-08-31  Per Bothner  <per@bothner.com>

	* ArrayPrint.java (putLine): Don't emit newline at end.
	This fixes a problem with "word" separators and extra spaces.

	* DisplayFormat.java (writeObjectRaw): Write BitVector
	in Common Lisp format.
